# cairn-plot

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: API.md  api-cleanup-inventory.md  browser-support.md  pages-index.html
docs/specs/: diff-kernels-and-flip.md
examples/: demo_cairn_plot.py  demo_url_images.py  report_cairn_plot.py
examples/rendered/: url-images.html
schema/: cairn-plot-spec.schema.json
src/cairn_plot/: __init__.py  _default_resolvers.py  bundle.py  components.py  elements.py  recipes.py  report.py  shapers.py  spec.py
src/cairn_plot/_assets/plot-inline/: core.iife.js  gpu-image.iife.js  style.css  three.iife.js
src/cairn_plot/_sdk/: __init__.py  wrappers.py
src/cairn_plot/_sdk/handlers/: __init__.py  _optional.py  _properties.py  boxes3d.py  mesh.py  pointcloud.py  table.py  volume.py
src/cairn_plot/templates/cairn/: _macros.html.j2  fragment.html.j2  page.html.j2  theme.css
src/cairn_plot/templates/minimal/: fragment.html.j2  page.html.j2
tests/: test_chart_colormap.py  test_compare_modes.py  test_plot_gallery_example.py  test_plot_helpers.py  test_plot_report.py  test_report_templates.py  test_store_deflate.py
ui/: package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.plot-core.config.ts  vite.plot-figure.config.ts  vite.plot-gpu-image.config.ts  vite.plot-three.config.ts
ui/scripts/: check-plot-boundary.mjs  check-plot-spec-schema.mjs  gen-plot-spec-schema.mjs  smoke-plot-gallery.mjs  sync-plot-assets.mjs
ui/src/: plot-bootstrap.tsx  plot-core-main.tsx  plot-descriptor.ts  plot-figure-addon.tsx  plot-figure-renderer.tsx  plot-gpu-image-addon.tsx  plot-main.tsx  plot-node.tsx  plot-registry.tsx  plot-renderers.tsx  plot-standalone-helpers.tsx  plot-three-addon.tsx  plot-three-renderers.tsx
ui/src/lib/cairn-plot/: format.ts  index.ts  lazy-mount.test.ts  lazy-mount.ts  table-diff.ts  tailwind-preset.ts  theme.ts  types.ts
ui/src/lib/cairn-plot/colormaps/: apply.test.ts  apply.ts  index.ts  lut.ts  sample.test.ts  sample.ts  viridis.ts
ui/src/lib/cairn-plot/controls/: ToolbarConfig.ts  types.ts
ui/src/lib/cairn-plot/engine/: compare-align.test.ts  compare-align.ts  device.ts  diff-cmap-mode.test.ts  diff-cmap-mode.ts  diff-engine.ts  image-engine.ts  pool.ts  test-hooks.ts  types.ts
ui/src/lib/cairn-plot/hooks/: index.ts  use-container-size.ts  use-device-pixel-ratio.ts  use-emit-auto-height.ts  use-image-viewport.ts  use-modifier-key.ts  use-resettable-state.ts  use-series-visibility.ts
ui/src/lib/cairn-plot/image/: cache.ts  decoders.test.ts  decoders.ts  diff.ts  half.ts  index.ts  render-mode.ts  tonemap.test.ts  tonemap.ts  webgl-diff.ts
ui/src/lib/cairn-plot/media-compare/: GpuComparePane.tsx  compare-mode-menu.ts  compositor.tsx  cross-type-align.ts  index.ts  migrate-legacy-mode.ts  mode.ts  post-processing.tsx  reference.ts
ui/src/lib/cairn-plot/primitives/: Axis.tsx  Colorbar.tsx  ColormapSwatch.tsx  LabelChip.tsx  PixelAxes.tsx  PixelValueOverlay.tsx  PlotColorbar.tsx  PlotLegend.tsx  PlotToolbar.tsx  Tooltip.tsx  capability-notice.test.ts  capability-notice.ts  colorbar-layout.test.ts  colorbar-layout.ts  index.ts  plot-to-png.ts  slider-entry.test.ts  slider-entry.ts  toolbar-fold.test.ts  toolbar-fold.ts  tooltip-position.ts
ui/src/lib/cairn-plot/renderers/: BarChart.tsx  CpuImagePane.tsx  Figure.tsx  GpuImagePane.tsx  HdrImagePane.tsx  Heatmap.tsx  HistogramPlot.tsx  ImageOverlay.tsx  ImagePane.tsx  ImagePaneShell.tsx  ParallelCoords.tsx  PointCloudViewer.tsx  ScalarPlot.tsx  ScatterPlot.tsx  Table.tsx  bar-layout.test.ts  bar-layout.ts  coalesce.test.ts  coalesce.ts  image-backend.ts  index.ts  region-edit.test.ts  region-edit.ts  region-select.test.ts  region-select.ts  table-align.test.ts  table-align.ts  use-chart-controller.ts  use-deep-flatten.ts  (+1 more)
wasm/: .gitignore
wasm/exr-decode/: Cargo.toml
wasm/exr-decode/.cargo/: config.toml
wasm/exr-decode/inline/: cairn_exr_decode.js  wasm-exr-inline.test.ts  wasm-exr-inline.ts
wasm/exr-decode/src/: decode.rs  lib.rs  wasm.rs
wasm/exr-decode/tests/: decode.rs
wasm/openexr/: .gitignore  bench.mjs  build.sh  gen-inline.mjs  harness.mjs
wasm/openexr/fixtures/: .gitignore  build-native.sh  gen.cpp
wasm/openexr/src/: binding.cpp
wasm/scripts/: bench-exr.ts  gen-wasm-exr-inline.mjs
(+135 files in other folders)
