[project]
name = "cairn-plot"
version = "0.1.0"
description = "Standalone, Plotly-shaped plotting library — self-contained offline HTML plots and reports, no server required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Cairn contributors" }]
keywords = ["plotting", "visualization", "notebook", "plotly", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    # Report templating (cp.Report renders through a Jinja2 template — the
    # branded `cairn` theme + `minimal`, or a caller-supplied template).
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Plotly + Pillow are needed only for the figure recipes / raw-image baking;
# the core 2D/3D composables and reports work with numpy + pydantic alone.
media = [
    "plotly>=5.18",
    "pillow>=10.0.0",
]
# Test/dev tooling. `media` is pulled in so the plotly-gated tests + examples
# run rather than skip.
dev = [
    "pytest>=8.0",
    "plotly>=5.18",
    "pillow>=10.0.0",
    "flip-evaluator>=1.7",  # official NVIDIA FLIP — validation example + kernel test fixtures
]

[project.urls]
Repository = "https://github.com/doeringchristian/cairn-plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn_plot"]
# The JS/CSS renderer bundles are the package's canonical payload (packaging
# spec §5) — ship them as package data (kept in sync from ui/dist by
# ui/scripts/sync-plot-assets.mjs). `_assets` is a built artifact so it gets an
# explicit `artifacts` entry; the Jinja2 report templates (templates/**/*.j2 +
# theme.css) are tracked source under the package, so the `packages = [...]`
# selection above already ships them in the wheel.
artifacts = ["src/cairn_plot/_assets/**/*"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
markers = [
    "media: tests that require the `media` extra (plotly / pillow).",
]
